# agent-folio

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  EVAL_RESULTS.md  LICENSE  README.md  SECURITY.md  TESTING.md  auth.py  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
eval/: eval_check.py  eval_snapshot.py  golden_data.yaml
models/: schemas.py
routers/: admin.py  agent.py
scripts/: changelog_overrides.json  generate_changelog.py  seed_grader.py
sdks/: anthropic_sdk.py  base.py  langchain_sdk.py  litellm_sdk.py  openai_sdk.py
seed-data/: crypto-portfolio.csv  mixed-portfolio-ghostfolio.json  stock-portfolio-robinhood.csv
services/: agent_service.py  db.py  ghostfolio_client.py  guardrails.py  invest_insight_client.py  sdk_registry.py  verification.py
services/providers/: base.py  combined.py  factory.py  invest_insight_provider.py  rotki_client.py
static/: agent-chat.html  changelog.json
tests/: conftest.py  test_admin_models.py  test_agent_service.py  test_api.py  test_auth.py  test_combined_provider.py  test_ghostfolio_client.py  test_guardrails.py  test_rotki_client.py  test_sdk_registry.py  test_tools.py  test_verification.py
tools/: __init__.py  account_overview.py  dividend_history.py  invest_insight_demographics.py  invest_insight_properties.py  invest_insight_search.py  investment_timeline.py  market_data.py  performance.py  portfolio_report.py  portfolio_summary.py  risk_assessment.py  stock_history.py  tax_estimate.py  transaction_history.py
