[project]
name = "agent-folio"
version = "1.0.0"
description = "AI portfolio agent for Ghostfolio, Rotki, and more"
license = "MIT"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "asyncio: mark a test as an asyncio coroutine",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["services", "tools", "routers", "models", "sdks", "config", "auth"]

[tool.coverage.run]
source = ["services", "tools", "routers", "models"]
omit = [
    "tests/*",
    "eval/*",
    "sdks/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 35
